--- a/base/src/main/res/values/styles.xml
+++ b/base/src/main/res/values/styles.xml
@@ -11,5 +11,7 @@
 
         <!--修改顶部标题背景颜色，具体颜色自己定， 可以是图片-->
         <item name="android:topDark">@android:color/white</item>
+
+        <item name="android:windowIsFloating">false</item>
     </style>
 </resources>
