--- a/app/src/main/res/layout/activity_color_bar.xml
+++ b/app/src/main/res/layout/activity_color_bar.xml
@@ -5,19 +5,21 @@
     android:layout_height="match_parent"
     >
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="?android:attr/actionBarSize"
-        android:background="@color/colorPrimary"
-        >
+    <!--<FrameLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="?android:attr/actionBarSize"-->
+        <!--android:background="@color/colorPrimary"-->
+        <!--&gt;-->
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="标题"
-            android:textColor="@android:color/white"
-            android:textSize="18sp"
-            />
-    </FrameLayout>
+        <!--<TextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_gravity="center"-->
+            <!--android:text="标题"-->
+            <!--android:textColor="@android:color/white"-->
+            <!--android:textSize="18sp"-->
+            <!--/>-->
+    <!--</FrameLayout>-->
+
+    <include layout="@layout/tool_bar_layout"/>
 </android.support.constraint.ConstraintLayout>
